--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "tejaswini m b",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1"
