--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1"
   }
